fixed ticket text display (word-wrap css property for not surpasse div block)

--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -121,6 +121,7 @@ textarea {
 
 .ticket-details-span {
   font-weight: normal;
+  word-wrap: break-word;  /* break long words */
 }
 
 .ticket-list-header {
